--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,32 @@ body {
     font-family: sans-serif;
 }
 
-img {
-    max-width: 100%;
+.btn {
+    cursor: pointer;
+    border: 0;
+    background: transparent;
+    color: var(--clr-text);
+    font-size: 1.125rem;
+    padding: 0.5rem;
+    position: relative;
+}
+
+.btn::after {
+    content: '';
+    position: absolute;
+    background: var(--clr-accent);
+    height: .9em;
+    width: 75%;
+    left: 0;
+    top: 50%;
+    z-index: -1;
+    transition: 175ms cubic-bezier(0.9, 0, 0.5, 1);
+    transform-origin: bottom left;
+}
+
+.btn:hover::after,
+.btn:focus::after {
+    transform: scale(1.35, 1.85);
 }
 
 .title {
@@ -36,5 +60,76 @@ img {
     color: var(--clr-icons);
     margin: 0;
     font-size: 1.5rem;
+    margin-bottom: 1.5em;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    margin: 2em 0;
+}
+
+.nav {
+    outline: 2px solid red;
+    flex-grow: 1;
+    justify-content: space-around;
+}
+
+.nav__link {
+    color: var(--clr-text);
+    text-transform: capitalize;
+    text-decoration: none;
+}
+
+.nav__link:hover,
+.nav__link:focus {
+    color: var(--clr-accent);
+}
+
+.container {
+    width: 80%;
+    margin: 2rem auto;
+}
+
+.gallery {
+    display: grid;
+    grid-template-columns: (2, 1fr);
+    grid-template-rows: (2, 2fr);
+    gap: 0.2em;
+    border: 2px solid red;
+}
+
+.gallery-image {
+    width: 100%;
+}
+
+.gallery__item--1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.gallery__item--2 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 2;
+}
+
+.gallery__item--3 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
+}
+
+footer {
+    margin: 2em;
+}
+
+.social-link:hover,
+.social-link:focus {
+    opacity: 0.5;
 }
 
